# media-player

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
libs/FFmpeg/: CMakeLists.txt
libs/ImGuiFileDialog/: ImGuiFileDialog.cpp
libs/glad/: glad.c  glad.h
libs/imgui/examples/example_glfw_opengl3/: main.cpp
libs/imgui/examples/example_glfw_vulkan/: main.cpp
resource/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: audio_player.cpp  audio_player.hpp  main.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  video_decoder.cpp  video_decoder.hpp
